adicionei um segundo lorem

--- a/site-exemplo/site.html
+++ b/site-exemplo/site.html
@@ -9,5 +9,6 @@
     <h1>Olá mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae dolore necessitatibus tempora facilis recusandae voluptates, rem architecto nostrum soluta voluptatem odit laudantium. Ducimus necessitatibus nostrum esse, quam veniam facere blanditiis!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, eius numquam quisquam cum asperiores fuga quidem, libero veniam ea enim odit facere voluptatem praesentium sit? Nisi atque ducimus nobis suscipit?</p>
 </body>
 </html>
